--- a/Server/WebSite/LocationWeb/Views/AreaAuthorization/Edit.cshtml
+++ b/Server/WebSite/LocationWeb/Views/AreaAuthorization/Edit.cshtml
@@ -41,7 +41,8 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.StartTime, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.StartTime, new { htmlAttributes = new { @class = "form-control", @type = "datetime-local" } })
+                    <input class="form-control" type="datetime-local" name="StartTime" value=@Model.StartTime.ToString("yyyy-MM-ddThh:mm:ss") />
+                    @*@Html.EditorFor(model => model.StartTime, new { htmlAttributes = new { @class = "form-control", @type = "datetime-local" } })*@
                     @Html.ValidationMessageFor(model => model.StartTime, "", new { @class = "text-danger" })
                 </div>
             </div>
@@ -49,7 +50,8 @@
             <div class="form-group">
                 @Html.LabelFor(model => model.EndTime, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-10">
-                    @Html.EditorFor(model => model.EndTime, new { htmlAttributes = new { @class = "form-control", @type = "datetime-local" } })
+                    <input class="form-control" type="datetime-local" name="EndTime" value=@Model.EndTime.ToString("yyyy-MM-ddThh:mm:ss") />
+                    @*@Html.EditorFor(model => model.EndTime, new { htmlAttributes = new { @class = "form-control", @type = "datetime-local" } })*@
                     @Html.ValidationMessageFor(model => model.EndTime, "", new { @class = "text-danger" })
                 </div>
             </div>
