--- a/Server/WebSite/LocationWeb/Views/Home/Index.cshtml
+++ b/Server/WebSite/LocationWeb/Views/Home/Index.cshtml
@@ -5,18 +5,20 @@
 @*<embed src="/api/areas/svg?Id=2" type="image/svg+xml" style="width:100%; height:100%" />*@
 
 <div id="showSvg"></div>
+<div id="canvas" style="width:1750px; height:864px"></div>
+
+<style type="text/css"> 
+    #showSvg{
+        position:absolute;
+    }
+    #canvas{
+        position:absolute; float:left;
+    }
+    footer{
+        position:absolute; bottom:0px;
+    }
+</style>
 
 <script src="~/Scripts/jquery-1.10.2.js"></script>
-<script type="text/javascript">    
-    $.ajax({
-        type: "Get",
-        url: "/api/areas/svg?Id=2",
-        dataType: "html",
-        //contentType: "text/html; charset=utf-8",
-        async: true,
-        success: function (data) {
-            //console.log(data)
-            $("#showSvg").html(data);
-        }
-    });
-</script>
+<script src="~/Scripts/echarts.js"></script>
+<script src="~/Scripts/position.js"></script>
