--- a/Server/WebSite/LocationWeb/Views/LocationCardPosition/Index.cshtml
+++ b/Server/WebSite/LocationWeb/Views/LocationCardPosition/Index.cshtml
@@ -7,28 +7,6 @@
 
 <h2>实时位置</h2>
 
-@*<p>
-    @Ajax.ActionLink("Create New", "Create", "LocationCardPosition", new AjaxOptions
-    {
-        HttpMethod = "GET",
-        UpdateTargetId = "modalContent",
-        InsertionMode = InsertionMode.Replace,
-        OnBegin = "onBegin",
-        OnSuccess = "onSuccess",
-        OnFailure = "onFailure",
-        OnComplete = "onComplete"
-    })
-</p>*@
-
-<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true" data-backdrop='static'>
-    <div class="modal-dialog">
-        <div class="modal-content" id="modalContent">
-            <div class="modal-header">
-            </div>
-        </div>
-    </div>
-</div>
-
 <table class="table">
     <tr>
         <th>
@@ -50,6 +28,15 @@
             @Html.DisplayNameFor(model => model.Power)
         </th>
         <th>
+            @Html.DisplayNameFor(model => model.PowerState)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.AreaState)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.MoveState)
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.Number)
         </th>
         <th>
@@ -58,7 +45,9 @@
         <th>
             @Html.DisplayNameFor(model => model.AreaId)
         </th>
-        <th></th>
+        <th>
+            @Html.DisplayNameFor(model => model.PersonId)
+        </th>
     </tr>
 
 @foreach (var item in Model) {
@@ -82,60 +71,28 @@
             @Html.DisplayFor(modelItem => item.Power)
         </td>
         <td>
+            @Html.DisplayFor(modelItem => item.PowerState)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.AreaState)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.MoveState)
+        </td>
+        <td>
             @Html.DisplayFor(modelItem => item.Number)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Flag)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.AreaId)
-        </td>
-        @*<td>          
-
-            @Ajax.ActionLink("Edit", "Edit", "LocationCardPosition", new { id = item.Code }, new AjaxOptions
-           {
-               HttpMethod = "Get",
-               UpdateTargetId = "modalContent",
-               InsertionMode = InsertionMode.Replace,
-               OnBegin = "onBegin",
-               OnSuccess = "onSuccess",
-               OnFailure = "onFailure",
-               OnComplete = "onComplete"
-           }) |
-
-            @Ajax.ActionLink("Details", "Details", "LocationCardPosition", new { id = item.Code }, new AjaxOptions
-           {
-               HttpMethod = "GET",
-               UpdateTargetId = "modalContent",
-               InsertionMode = InsertionMode.Replace,
-               OnBegin = "onBegin",
-               OnSuccess = "onSuccess",
-               OnFailure = "onFailure",
-               OnComplete = "onComplete"
-           }) |
-
-            @Ajax.ActionLink("Delete", "Delete", "LocationCardPosition", new { id = item.Code }, new AjaxOptions
-           {
-               HttpMethod = "GET",
-               UpdateTargetId = "modalContent",
-               InsertionMode = InsertionMode.Replace,
-               OnBegin = "onBegin",
-               OnSuccess = "onSuccess",
-               OnFailure = "onFailure",
-               OnComplete = "onComplete"
-           })
-        </td>*@
+            @Html.DisplayFor(modelItem => item.Area.Name)
+        </td>  
+        <td>
+            @Html.DisplayFor(modelItem => item.Person.Name)
+        </td>    
     </tr>
 }
-
 </table>
 @Html.Pager(Model, new PagerOptions { PageIndexParameterName = "pageIndex", Id = "htmlPager", FirstPageText = "首页", LastPageText = "尾页", NextPageText = ">", PrevPageText = "<", ContainerTagName = "ul", CssClass = "pagination pagination-sm", CurrentPagerItemTemplate = "<li class=\"active\"><a href=\"#\">{0}</a></li>", DisabledPagerItemTemplate = "<li class=\"disabled\"><a>{0}</a></li>", PagerItemTemplate = "<li>{0}</li>" })
 
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
-
-<script src="~/Scripts/jquery-1.10.2.js"></script>
-
-<script src="~/Scripts/jqueryui-1.12.1.js"></script>
-<script src="~/Scripts/indexmodal.js"></script>
