--- a/Server/WebSite/LocationWeb/Views/OperationTicket/Create.cshtml
+++ b/Server/WebSite/LocationWeb/Views/OperationTicket/Create.cshtml
@@ -5,61 +5,102 @@
     ViewBag.Title = "Create";
 }
 
-<!DOCTYPE html>
+<h2>Create</h2>
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <style>
-        span {
-            display: inline-block;
-            width: 200px;
-            text-align: right;
-        }
-    </style>
-    <title>Create</title>
-</head>
-<body>
-    <h2>Create</h2>
-    <form action="/OperationTicket/CreateTicket">
-        <fieldset>
-            <legend>基本信息</legend>
-            <span>@Html.DisplayNameFor(model => model.No)：</span><input type="text" name="No" value=@Model.No /><br />
-            <span>@Html.DisplayNameFor(model => model.OperationTask)：</span><input type="text" name="OperationTask" value=@Model.OperationTask /><br />
-            <span>@Html.DisplayNameFor(model => model.OperationStartTime)：</span><input type="datetime-local" name="OperationStartTime" value=@Model.OperationStartTime.ToString("yyyy-MM-ddThh:mm:ss") />
-            <span>@Html.DisplayNameFor(model => model.OperationEndTime)：</span><input type="datetime-local" name="OperationEndTime" value=@Model.OperationEndTime.ToString("yyyy-MM-ddThh:mm:ss") /><br />
-            <span>@Html.DisplayNameFor(model => model.Guardian)：</span><input type="text" name="Guardian" value=@Model.Guardian /><br />
-            <span>@Html.DisplayNameFor(model => model.Operator)：</span><input type="text" name="Operator" value=@Model.Operator /><br />
-            <span>@Html.DisplayNameFor(model => model.DutyOfficer)：</span><input type="text" name="DutyOfficer" value=@Model.DutyOfficer /><br />
-            <span>@Html.DisplayNameFor(model => model.Dispatch)：</span><input type="text" name="Dispatch" value=@Model.Dispatch /><br />
-            <span>@Html.DisplayNameFor(model => model.Remark)：</span><input type="text" name="Remark" value=@Model.Remark /><br />
-        </fieldset>
-        <fieldset>
-            <table class="table">
-                <caption><h2 style="text-align:left">操作项</h2></caption>
-                <caption><h4 style="text-align:left"><a href="" id="BtnOpenCreateItemDialog">Create Item</a></h4></caption>
-                <tr>
-                    <th>操作时间</th>
-                    <th>记号</th>
-                    <th>顺序</th>
-                    <th>操作项目</th>
-                </tr>
-                @foreach (OperationItem item in Model.OperationItems)
-                {
-                    <tr>
-                        <td>@item.OperationTime</td>
-                        <td>@item.Mark</td>
-                        <td>@item.OrderNum</td>
-                        <td>@item.Item</td>
-                    </tr>
-                }
-            </table>
-        </fieldset>      
-        <p>
-            <input type="submit" value="Create" /> |
-            @Html.ActionLink("返 回", "Index")
-        </p>
-    </form>
-</body>
-</html>
+@using (Html.BeginForm())
+{
+    @Html.AntiForgeryToken()
+
+    <div class="form-horizontal">
+        <h4>操作票</h4>
+        <hr />
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        <div class="form-group">
+            @Html.LabelFor(model => model.No, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.No, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.No, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.OperationTask, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.OperationTask, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.OperationTask, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.OperationStartTime, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.OperationStartTime, new { htmlAttributes = new { @class = "form-control",@type = "datetime-local" } })
+                @Html.ValidationMessageFor(model => model.OperationStartTime, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.OperationEndTime, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.OperationEndTime, new { htmlAttributes = new { @class = "form-control", @type = "datetime-local" } })
+                @Html.ValidationMessageFor(model => model.OperationEndTime, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Guardian, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Guardian, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Guardian, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Operator, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Operator, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Operator, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.DutyOfficer, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.DutyOfficer, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.DutyOfficer, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Dispatch, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Dispatch, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Dispatch, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Remark, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Remark, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Remark, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Create" class="btn btn-default" />
+            </div>
+        </div>
+    </div>
+
+    <div>
+        @Html.ActionLink("返 回", "Index")
+    </div>
+}
+
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
+
 
