--- a/Server/WebSite/LocationWeb/Views/OperationTicket/CreateItem.cshtml
+++ b/Server/WebSite/LocationWeb/Views/OperationTicket/CreateItem.cshtml
@@ -4,30 +4,63 @@
     ViewBag.Title = "CreateItem";
 }
 
-<!DOCTYPE html>
+<h2>CreateItem</h2>
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <style>
-        span {
-            display: inline-block;
-            width: 200px;
-            text-align: right;
-        }
-    </style>
-    <title>CreateItem</title>
-</head>
-<body>
-    <h2>CreateItem</h2>
-    <form action="/OperationTicket/CreateItem2">
-        <input type="hidden" name="TicketId" value=@Model.TicketId />
-        <span>操作时间：</span><input type="time" name="OperationTime" value=@Model.OperationTime.ToString("yyyy-MM-ddThh:mm:ss") /><br />
-        <span>记号：</span><input type="checkbox" name="Mark" value="true" /><br />
-        <span>顺序：</span><input type="text" name="OrderNum" value=@Model.OrderNum /><br />
-        <span>操作项目：</span><input type="text" name="Item" value=@Model.Item /><br />
-        <input type="submit" value="Create" /> |
+@using (Html.BeginForm())
+{
+    @Html.AntiForgeryToken()
+
+    <div class="form-horizontal">
+        <h4>操作项</h4>
+        <hr />
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.HiddenFor(model => model.TicketId)        
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.OperationTime, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.OperationTime, new { htmlAttributes = new { @class = "form-control", @type = "datetime-local" } })
+                @Html.ValidationMessageFor(model => model.OperationTime, "", new { @class = "text-danger" })
+            </div>
+        </div>       
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Mark, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Mark, new { htmlAttributes = new {@type = "checkbox", @value = "true" } })
+                @Html.ValidationMessageFor(model => model.Mark, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.OrderNum, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.OrderNum, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.OrderNum, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Item, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Item, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Item, "", new { @class = "text-danger" })
+            </div>
+        </div>       
+
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Create" class="btn btn-default" />
+            </div>
+        </div>
+    </div>
+
+    <div>
         <a href="/OperationTicket/Edit/@Model.TicketId">返 回</a>
-    </form>
-</body>
-</html>
+    </div>
+}
+
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
+  
