--- a/Server/WebSite/LocationWeb/Views/OperationTicket/Details.cshtml
+++ b/Server/WebSite/LocationWeb/Views/OperationTicket/Details.cshtml
@@ -4,57 +4,119 @@
 @{
     ViewBag.Title = "Details";
 }
+    
+<h2>Details</h2>
 
-<!DOCTYPE html>
+<div>
+    <h3>操作票</h3>
+    <hr />
+    <dl class="dl-horizontal">
+        <dt>
+            @Html.DisplayNameFor(model => model.No)
+        </dt>
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <style>
-        span {display:inline-block;width:200px;text-align:right;
+        <dd>
+            @Html.DisplayFor(model => model.No)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.OperationTask)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.OperationTask)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.OperationStartTime)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.OperationStartTime)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.OperationEndTime)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.OperationEndTime)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Guardian)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Guardian)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Operator)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Operator)  
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.DutyOfficer)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.DutyOfficer)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Dispatch)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Dispatch)
+        </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.Remark)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Remark)
+        </dd>
+    </dl>
+</div>
+
+<div class="form-horizontal">
+    <h3>操作项</h3>
+    <table class="table">
+        <tr>
+            <th>操作时间</th>
+            <th>记号</th>
+            <th>顺序</th>
+            <th>操作项目</th>
+        </tr>
+        @foreach (OperationItem item in Model.OperationItems)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => item.OperationTime)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Mark)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.OrderNum)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Item)
+                </td>               
+            </tr>
         }
-    </style>
-    <title>Details</title>
-</head>
-<body>
-    <h2>Details</h2>
-    <form>
-        <fieldset>
-            <legend>基本信息</legend>
-            <span>@Html.DisplayNameFor(model => model.No)：</span><input type="text" name="No" value=@Model.No /><br/>
-            <span>@Html.DisplayNameFor(model => model.OperationTask)：</span><input type="text" name="OperationTask" value=@Model.OperationTask /><br />
-            <span>@Html.DisplayNameFor(model => model.OperationStartTime)：</span><input type="datetime-local" name="OperationStartTime" value=@Model.OperationStartTime.ToString("yyyy-MM-ddThh:mm:ss") />
-            <span>@Html.DisplayNameFor(model => model.OperationEndTime)：</span><input type="datetime-local" name="OperationEndTime" value=@Model.OperationEndTime.ToString("yyyy-MM-ddThh:mm:ss") /><br/>
-            <span>@Html.DisplayNameFor(model => model.Guardian)：</span><input type="text" name="Guardian" value=@Model.Guardian /><br />
-            <span>@Html.DisplayNameFor(model => model.Operator)：</span><input type="text" name="Operator" value=@Model.Operator /><br />
-            <span>@Html.DisplayNameFor(model => model.DutyOfficer)：</span><input type="text" name="DutyOfficer" value=@Model.DutyOfficer /><br />    
-            <span>@Html.DisplayNameFor(model => model.Dispatch)：</span><input type="text" name="Dispatch" value=@Model.Dispatch /><br />
-            <span>@Html.DisplayNameFor(model => model.Remark)：</span><input type="text" name="Remark" value=@Model.Remark /><br />
-        </fieldset>
-        <fieldset>
-            <table class="table">
-                <caption><h2 style="text-align:left">操作项</h2></caption>
-                <tr>
-                    <th>操作时间</th>
-                    <th>记号</th>
-                    <th>顺序</th>
-                    <th>操作项目</th>
-                </tr>
-                @foreach (OperationItem item in Model.OperationItems)
-                {
-                    <tr>
-                        <td>@item.OperationTime</td>
-                        <td>@item.Mark</td>
-                        <td>@item.OrderNum</td>
-                        <td>@item.Item</td>
-                    </tr>
-                }
-            </table>
-        </fieldset>
-    </form>
-    <p>
-        @Html.ActionLink("编辑", "Edit", new { id = Model.Id }) |
-        @Html.ActionLink("返 回", "Index")
-    </p>
-</body>
-</html>
+    </table>
+</div>
+
+<p>
+    @Html.ActionLink("编辑", "Edit", new { id = Model.Id }) |
+    @Html.ActionLink("返回", "Index")
+</p>
+
+
