--- a/Server/WebSite/LocationWeb/Views/OperationTicket/Edit.cshtml
+++ b/Server/WebSite/LocationWeb/Views/OperationTicket/Edit.cshtml
@@ -5,68 +5,183 @@
     ViewBag.Title = "Edit";
 }
 
-<!DOCTYPE html>
+<h2>Edit</h2>
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <style>
-        span {
-            display: inline-block;
-            width: 200px;
-            text-align: right;
-        }
-    </style>
-    <title>Edit</title>
-</head>
-<body>
-    <h2>Edit</h2>
-    @*@Html.ValidationSummary(true, "", new { @class = "text-danger" })*@
-    @*@Html.HiddenFor(model => model.Id)*@
-    <form action="/OperationTicket/EditTicket" method="post">
-        <fieldset>
-            <legend>基本信息</legend>
-            <input type="hidden" name="Id" value=@Model.Id />
-            <span>操作编号：</span><input type="text" name="No" value=@Model.No /><br />
-            <span>操作任务：</span><input type="text" name="OperationTask" value=@Model.OperationTask /><br />
-            <span>操作起始时间：</span><input type="datetime-local" name="OperationStartTime" value=@Model.OperationStartTime.ToString("yyyy-MM-ddThh:mm:ss") />
-            <span>操作结束时间：</span><input type="datetime-local" name="OperationEndTime" value=@Model.OperationEndTime.ToString("yyyy-MM-ddThh:mm:ss") /><br />
-            <span>监护人：</span><input type="text" name="Guardian" value=@Model.Guardian /><br />
-            <span>操作人：</span><input type="text" name="Operator" value=@Model.Operator /><br />
-            <span>值班负责人：</span><input type="text" name="DutyOfficer" value=@Model.DutyOfficer /><br />
-            <span>调度：</span><input type="text" name="Dispatch" value=@Model.Dispatch /><br />
-            <span>备注：</span><input type="text" name="Remark" value=@Model.Remark /><br />
-        </fieldset>
-        <fieldset>
-            <table class="table">
-                <caption><h2 style="text-align:left">操作项</h2></caption>
-                <caption><h4 style="text-align:left"><a href="/OperationTicket/CreateItem/@Model.Id">Create Item</a></h4></caption>
+@using (Html.BeginForm())
+{
+    @Html.AntiForgeryToken()
+
+    <div class="form-horizontal">
+        <h4>操作票</h4>
+        <hr />
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        @Html.HiddenFor(model => model.Id)
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.No, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.No, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.No, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.OperationTask, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.OperationTask, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.OperationTask, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.OperationStartTime, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                <input class="form-control" type="datetime-local" name="OperationStartTime" value=@Model.OperationStartTime.ToString("yyyy-MM-ddThh:mm:ss") />
+                @*@Html.EditorFor(model => model.OperationStartTime, new { htmlAttributes = new { @class = "form-control", @type = "datetime-local" } })*@
+                @Html.ValidationMessageFor(model => model.OperationStartTime, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.OperationEndTime, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                <input class="form-control" type="datetime-local" name="OperationEndTime" value=@Model.OperationEndTime.ToString("yyyy-MM-ddThh:mm:ss") />
+                @*@Html.EditorFor(model => model.OperationEndTime, new { htmlAttributes = new { @class = "form-control", @type = "datetime-local" } })*@
+                @Html.ValidationMessageFor(model => model.OperationEndTime, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Guardian, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Guardian, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Guardian, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Operator, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Operator, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Operator, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.DutyOfficer, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.DutyOfficer, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.DutyOfficer, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Dispatch, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Dispatch, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Dispatch, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Remark, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Remark, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Remark, "", new { @class = "text-danger" })
+            </div>
+        </div>       
+    </div>
+   
+    <div class="form-horizontal">
+        <h3>操作项</h3>
+        <h4><a href="/OperationTicket/CreateItem/@Model.Id">Create Item</a></h4>
+        <table class="table">
+            <tr>
+                <th>操作时间</th>
+                <th>记号</th>
+                <th>顺序</th>
+                <th>操作项目</th>
+            </tr>
+            @foreach (OperationItem item in Model.OperationItems)
+            {
                 <tr>
-                    <th>操作时间</th>
-                    <th>记号</th>
-                    <th>顺序</th>
-                    <th>操作项目</th>
+                    <td>@Html.DisplayFor(modelItem => item.OperationTime)</td>
+                    <td>@Html.DisplayFor(modelItem => item.Mark)</td>
+                    <td>@Html.DisplayFor(modelItem => item.OrderNum)</td>
+                    <td>@Html.DisplayFor(modelItem => item.Item)</td>
+                    <td>
+                        @Html.ActionLink("编辑", "EditItem", new { id = item.Id }) |
+                        @Html.ActionLink("删除", "DeleteItem", new { id = item.Id, TicketId = item.TicketId })
+                    </td>
                 </tr>
-                @foreach (OperationItem item in Model.OperationItems)
-                {
-                    <tr>
-                        <td>@item.OperationTime</td>
-                        <td>@item.Mark</td>
-                        <td>@item.OrderNum</td>
-                        <td>@item.Item</td>
-                        <td>
-                            @Html.ActionLink("编辑", "EditItem", new { id = item.Id }) |
-                            @Html.ActionLink("删除", "DeleteItem", new { id = item.Id, TicketId = item.TicketId })
-                        </td>
-                    </tr>
-                }
-            </table>
-        </fieldset>      
-        <p>
-            <input type="submit" value="Save" /> |
-            <a href="/OperationTicket/Index">返 回</a>
-        </p>
-    </form>   
-</body>
-</html>
+            }
+        </table>
+    </div>
+
+    <p>
+        <input type="submit" value="Save" /> |
+        <a href="/OperationTicket/Index">返 回</a>
+    </p>
+}
+
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
+
+@*<style>
+    span {
+        display: inline-block;
+        width: 200px;
+        text-align: right;
+    }
+</style>    
+
+<h2>Edit</h2>
+<form action="/OperationTicket/EditTicket" method="post">
+    <fieldset>
+        <legend>基本信息</legend>
+        <input type="hidden" name="Id" value=@Model.Id />
+        <span>操作编号：</span><input type="text" name="No" value=@Model.No /><br />
+        <span>操作任务：</span><input type="text" name="OperationTask" value=@Model.OperationTask /><br />
+        <span>操作起始时间：</span><input type="datetime-local" name="OperationStartTime" value=@Model.OperationStartTime.ToString("yyyy-MM-ddThh:mm:ss") /><br />
+        <span>操作结束时间：</span><input type="datetime-local" name="OperationEndTime" value=@Model.OperationEndTime.ToString("yyyy-MM-ddThh:mm:ss") /><br />
+        <span>监护人：</span><input type="text" name="Guardian" value=@Model.Guardian /><br />
+        <span>操作人：</span><input type="text" name="Operator" value=@Model.Operator /><br />
+        <span>值班负责人：</span><input type="text" name="DutyOfficer" value=@Model.DutyOfficer /><br />
+        <span>调度：</span><input type="text" name="Dispatch" value=@Model.Dispatch /><br />
+        <span>备注：</span><input type="text" name="Remark" value=@Model.Remark /><br />
+    </fieldset>
+    <fieldset>
+        <table class="table">
+            <caption><h2 style="text-align:left">操作项</h2></caption>
+            <caption><h4 style="text-align:left"><a href="/OperationTicket/CreateItem/@Model.Id">Create Item</a></h4></caption>
+            <tr>
+                <th>操作时间</th>
+                <th>记号</th>
+                <th>顺序</th>
+                <th>操作项目</th>
+            </tr>
+            @foreach (OperationItem item in Model.OperationItems)
+            {
+                <tr>
+                    <td>@item.OperationTime</td>
+                    <td>@item.Mark</td>
+                    <td>@item.OrderNum</td>
+                    <td>@item.Item</td>
+                    <td>
+                        @Html.ActionLink("编辑", "EditItem", new { id = item.Id }) |
+                        @Html.ActionLink("删除", "DeleteItem", new { id = item.Id, TicketId = item.TicketId })
+                    </td>
+                </tr>
+            }
+        </table>
+    </fieldset>
+    <p>
+        <input type="submit" value="Save" /> |
+        <a href="/OperationTicket/Index">返 回</a>
+    </p>
+</form>*@
+
+   
+    
 
