--- a/Server/WebSite/LocationWeb/Views/Positions/Index.cshtml
+++ b/Server/WebSite/LocationWeb/Views/Positions/Index.cshtml
@@ -8,11 +8,14 @@
 
 <h2>历史标签位置</h2>
 
-@*<p>
-    @Html.ActionLink("Create New", "Create")
-</p>*@
 <table class="table">
     <tr>
+        <th>
+            @Html.DisplayNameFor(model => model.CardId)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.RoleId)
+        </th>
         <th>
             @Html.DisplayNameFor(model => model.PersonnelID)
         </th>
@@ -35,6 +38,15 @@
             @Html.DisplayNameFor(model => model.Power)
         </th>
         <th>
+            @Html.DisplayNameFor(model => model.PowerState)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.AreaState)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.MoveState)
+        </th>
+        <th>
             @Html.DisplayNameFor(model => model.Number)
         </th>
         <th>
@@ -42,12 +54,17 @@
         </th>
         <th>
             @Html.DisplayNameFor(model => model.AreaId)
-        </th>
-        <th></th>
+        </th>       
     </tr>
 
 @foreach (var item in Model) {
     <tr>
+        <td>
+            @Html.DisplayFor(modelItem => item.CardId)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.RoleId)
+        </td>
         <td>
             @Html.DisplayFor(modelItem => item.PersonnelID)
         </td>
@@ -70,6 +87,15 @@
             @Html.DisplayFor(modelItem => item.Power)
         </td>
         <td>
+            @Html.DisplayFor(modelItem => item.PowerState)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.AreaState)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.MoveState)
+        </td>
+        <td>
             @Html.DisplayFor(modelItem => item.Number)
         </td>
         <td>
@@ -77,12 +103,7 @@
         </td>
         <th>
             @Html.DisplayFor(modelItem => item.AreaId)
-        </th>
-        @*<td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>*@
+        </th>       
     </tr>
 }
 
