--- a/Server/WebSite/LocationWeb/Views/Shared/_Layout.cshtml
+++ b/Server/WebSite/LocationWeb/Views/Shared/_Layout.cshtml
@@ -79,7 +79,8 @@
                             <li>@Html.ActionLink("KKS码", "Index", "KKSCode")</li>
                             <li>@Html.ActionLink("操作票", "Index", "OperationTicket")</li>
                             <li>@Html.ActionLink("工作票", "Index", "WorkTicket")</li>
-                            <li>@Html.ActionLink("巡检轨迹", "Index", "MobileInspection")</li>
+                            @*<li>@Html.ActionLink("巡检轨迹", "Index", "MobileInspection")</li>*@
+                            <li>@Html.ActionLink("巡检轨迹", "Index", "InspectionTrack")</li>
                         </ul>
                     </li>                 
                     <li>
@@ -119,8 +120,8 @@
     </div>
     <div class="container body-content">
         @RenderBody()
-        <hr />
         <footer>
+            <hr style="width:1614px;" />
             <p>&copy; @DateTime.Now.Year - 定位管理系统</p>
         </footer>
     </div>
