--- a/Server/WebSite/LocationWeb/Views/WorkTicket/Create.cshtml
+++ b/Server/WebSite/LocationWeb/Views/WorkTicket/Create.cshtml
@@ -5,60 +5,125 @@
     ViewBag.Title = "Create";
 }
 
-<!DOCTYPE html>
+<h2>Create</h2>
 
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <style>
-        span {
-            display: inline-block;
-            width: 200px;
-            text-align: right;
-        }
-    </style>
-    <title>Create</title>
-</head>
-<body>
-    <h2>Create</h2>
-    <form action="/WorkTicket/CreateTicket">
-        <fieldset>
-            <legend>基本信息</legend>
-            <span>@Html.DisplayNameFor(model => model.No)：</span><input type="text" name="No" value=@Model.No /><br />
-            <span>@Html.DisplayNameFor(model => model.PersonInCharge)：</span><input type="text" name="PersonInCharge" value=@Model.PersonInCharge /><br />
-            <span>@Html.DisplayNameFor(model => model.HeadOfWorkClass)：</span><input type="text" name="HeadOfWorkClass" value=@Model.HeadOfWorkClass /><br />
-            <span>@Html.DisplayNameFor(model => model.WorkPlace)：</span><input type="text" name="WorkPlace" value=@Model.WorkPlace /><br />
-            <span>@Html.DisplayNameFor(model => model.JobContent)：</span><input type="text" name="JobContent" value=@Model.JobContent /><br />
-            <span>@Html.DisplayNameFor(model => model.StartTimeOfPlannedWork)：</span><input type="datetime-local" name="StartTimeOfPlannedWork" value=@Model.StartTimeOfPlannedWork.ToString("yyyy-MM-ddThh:mm:ss") />
-            <span>@Html.DisplayNameFor(model => model.EndTimeOfPlannedWork)：</span><input type="datetime-local" name="EndTimeOfPlannedWork" value=@Model.EndTimeOfPlannedWork.ToString("yyyy-MM-ddThh:mm:ss") /><br />
-            <span>@Html.DisplayNameFor(model => model.WorkCondition)：</span><input type="text" name="WorkCondition" value=@Model.WorkCondition /><br />
-            <span>@Html.DisplayNameFor(model => model.Lssuer)：</span><input type="text" name="Lssuer" value=@Model.Lssuer /><br />
-            <span>@Html.DisplayNameFor(model => model.Licensor)：</span><input type="text" name="Licensor" value=@Model.Licensor /><br />
-            <span>@Html.DisplayNameFor(model => model.Approver)：</span><input type="text" name="Approver" value=@Model.Approver /><br />
-            <span>@Html.DisplayNameFor(model => model.Comment)：</span><input type="text" name="Comment" value=@Model.Comment /><br />
-        </fieldset>
-        <fieldset>
-            <table class="table">
-                <caption><h2 style="text-align:left">操作项</h2></caption>
-                <caption><h4 style="text-align:left"><a href="" id="BtnOpenCreateItemDialog">Create Item</a></h4></caption>
-                <tr>
-                    <th>签发人填写的安全措施</th>
-                    <th>许可人填写的安全措施</th>
-                </tr>
-                @foreach (SafetyMeasures item in Model.SafetyMeasuress)
-                {
-                    <tr>
-                        <td>@item.LssuerContent</td>
-                        <td>@item.LicensorContent</td>
-                    </tr>
-                }
-            </table>
-        </fieldset>
-        <p>
-            <input type="submit" value="Create" /> |
-            @Html.ActionLink("返 回", "Index")
-        </p>     
-    </form>
-</body>
-</html>
+@using (Html.BeginForm())
+{
+    @Html.AntiForgeryToken()
+
+    <div class="form-horizontal">
+        <h4>工作票</h4>
+        <hr />
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        <div class="form-group">
+            @Html.LabelFor(model => model.No, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.No, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.No, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.PersonInCharge, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.PersonInCharge, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.PersonInCharge, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.HeadOfWorkClass, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.HeadOfWorkClass, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.HeadOfWorkClass, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.WorkPlace, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.WorkPlace, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.WorkPlace, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.JobContent, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.JobContent, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.JobContent, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.StartTimeOfPlannedWork, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.StartTimeOfPlannedWork, new { htmlAttributes = new { @class = "form-control", @type = "datetime-local" } })
+                @Html.ValidationMessageFor(model => model.StartTimeOfPlannedWork, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.EndTimeOfPlannedWork, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.EndTimeOfPlannedWork, new { htmlAttributes = new { @class = "form-control", @type = "datetime-local" } })
+                @Html.ValidationMessageFor(model => model.EndTimeOfPlannedWork, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.WorkCondition, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.WorkCondition, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.WorkCondition, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Lssuer, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Lssuer, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Lssuer, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Licensor, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Licensor, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Licensor, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Approver, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Approver, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Approver, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            @Html.LabelFor(model => model.Comment, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Comment, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Comment, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Create" class="btn btn-default" />
+            </div>
+        </div>
+    </div>
+
+    <div>
+        @Html.ActionLink("返 回", "Index")
+    </div>
+}
+
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}   
 
