--- a/Server/WCFServer/LocationWCF/Windows/DbConfigureWindow.xaml
+++ b/Server/WCFServer/LocationWCF/Windows/DbConfigureWindow.xaml
@@ -28,6 +28,9 @@
             <MenuItem Header="保存数据">
                 <MenuItem Header="区域" Name="MenuSaveTop" Click="MenuSaveTop_Click"></MenuItem>
                 <MenuItem Header="设备信息" Name="DevSaveTop" Click="DevSaveTop_Click"></MenuItem>
+                <MenuItem Header="部门信息" Name="DepSaveTop" Click="DepSaveTop_Click"></MenuItem>
+                <MenuItem Header="人员信息" Name="PersonSaveTop" Click="PersonSaveTop_Click"></MenuItem>
+                <MenuItem Header="门禁卡信息" Name="EntranceGuardCardSaveTop" Click="EntranceGuardCardSaveTop_Click"></MenuItem>
             </MenuItem>
             <MenuItem Header="工具">
                 <MenuItem Header="整理初始化设备" Name="MenuRemoveArchor" Click="MenuRemoveArchor_Click"></MenuItem>
